--- a/styles.scss
+++ b/styles.scss
@@ -10,7 +10,7 @@ $bar: #a470464a;
 $azure-radiance: #a04c46;
 $lotus: #783a3a;
 $kokoda: #6B6B5B;
-$gg: #0101014f;
+$gg: #a7764e22;
 
 // Navigation Bar 
 
@@ -47,15 +47,20 @@ h1.title {
     letter-spacing: 0px !important;
 }
 
-h1,
+
 h2,
 h3,
 h4 {
-    font-family: 'Segoe UI' !important;
+    font-family: 'Verdana' !important;
+    letter-spacing: -2px !important;
 }
 
 h2 {
-    font-size: 2rem !important
+    font-size: 2.5rem !important;
+}
+
+h3 {
+    font-size: 1.5rem !important;
 }
 
 // TOC/Sidebar
@@ -82,6 +87,7 @@ h2 {
     font-weight: bold !important;
     color: $kokoda !important;
     border-bottom: none !important;
+    letter-spacing: 0px !important;
 }
 
 
