--- a/styles.scss
+++ b/styles.scss
@@ -6,18 +6,20 @@ $xanadu: #6b7b70;
 $anakiwa: #2d3934;
 $malibu: #232a25;
 $dodger-blue: #a47146;
+
+//My color palette add-ons 
 $bar: #a470464a;
 $azure-radiance: #a04c46;
 $lotus: #783a3a;
 $kokoda: #6B6B5B;
 $gg: #a7764e22;
+$cream: #f7f5f0;
 
 // Navigation Bar 
-
-/*.navbar-nav {  */
-
 .navbar {
     background-color: $malibu !important;
+    border-bottom: none !important;
+    box-shadow: none !important;
 }
 
 .navbar .navbar-brand:hover {
@@ -36,9 +38,110 @@ $gg: #a7764e22;
     background-color: $gg;
 }
 
+.quarto-dashboard #quarto-dashboard-header {
+    border-top: none !important;
+    border-bottom: none !important;
+}
+
+// Quarto Dashboard Specific Styles
+.quarto-dashboard #quarto-dashboard-header .navbar .navbar-container {
+    background-color: #E7E0D3 !important;
+    border-bottom: solid 1px !important;
+    border-bottom-color: transparent !important;
+    color: $kokoda !important; //color of header title
+}
+
+
+.quarto-dashboard #quarto-header #quarto-dashboard-header>nav .navbar-brand-container {
+    text-transform: uppercase !important;
+
+}
+
+.quarto-dashboard #quarto-header #quarto-dashboard-header>nav {
+    padding-left: 0em !important;
+    padding-right: 0em !important; // Remove padding to align with the left edge of the window
+    border-bottom: none !important;
+    box-shadow: none !important;
+}
+
+.quarto-dashboard #quarto-header #quarto-dashboard-header>.navbar {
+
+    .nav-link.active {
+        background-color: inherit !important; // Ensures the active link does not have a background color, to match the navbar
+        //text-decoration: underline !important;
+        border-bottom: solid 3.5px !important;
+        border-bottom-color: $xanadu !important;
+        color: $bar !important; // Active link color in navbar
+    }
+
+    .nav-link-text {
+        color: $kokoda; // Active link color in navbar
+    }
+}
+
+.card-header {
+    background-color: $kokoda !important;
+    font-family: 'Tahoma' !important;
+    color: $cream !important
+}
+
+.value-box-title {
+    font-family: 'Tahoma' !important; // Font for the title in value boxes
+    color: $cream !important; // Color of the title in value boxes
+    font-size: 1.2rem !important; // Size of the title in value boxes
+    text-transform: uppercase !important; // Make it uppercase
+}
+
+#quarto-sidebar {
+    background-color: $malibu !important;
+
+    * {
+        text-transform: uppercase;
+    }
+
+    a {
+        color: $cream !important;
+
+        &:hover {
+            color: $kokoda !important; //changes hover color for menu carrot
+        }
+    }
+
+    .sidebar-title>a {
+        // Sidebar Title 
+        //color: $cream !important;
+        text-transform: capitalize !important;
+        z-index: 1000;
+
+        &:hover {
+            // Sidebar Title Hover Color
+            color: $kokoda !important;
+        }
+    }
+
+    .menu-text {
+        // Sidebar menu text
+        font-size: 13px !important;
+        font-weight: 500 !important;
+        line-height: 22px !important;
+    }
+
+    .sidebar-section {
+        //dropdown menu
+        background-color: #303832;
+    }
+
+}
+
+#quarto-sidebar .sidebar-section a:hover {
+    //background-color: $gg2 !important;
+    //color: $malibu !important;
+    text-decoration: underline !important;
+    color: $cream !important;
+}
+
 
 //Body & Headers
-
 h1.title {
     font-size: 3.5rem !important;
     color: $kokoda !important;
@@ -46,7 +149,6 @@ h1.title {
     text-transform: none;
     letter-spacing: 0px !important;
 }
-
 
 h2,
 h3,
@@ -89,8 +191,6 @@ h3 {
     border-bottom: none !important;
     letter-spacing: 0px !important;
 }
-
-
 
 // Code
 p code,
